--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "cv_app",
+  "name": "planify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arwes/react": "^1.0.0-alpha.23",
+    "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.74",
-    "@types/react": "^18.2.48",
+    "@types/node": "^16.18.69",
+    "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "antd": "^5.12.6",
+    "axios": "^1.6.3",
+    "gsap": "^3.12.5",
+    "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
+    "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "react-simple-typewriter": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "tss-react": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=developmetn webpack-dev-server --open ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +54,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@types/react-custom-scroll": "^5.0.3",
+    "babel-loader": "^9.1.3",
+    "babel-preset-react": "^6.24.1",
+    "prettier": "3.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
