--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "planify",
-  "version": "0.1.0",
+  "name": "cv_app",
+  "version": "1.1.2",
   "private": true,
   "dependencies": {
     "@arwes/react": "^1.0.0-alpha.23",
     "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,10 +20,12 @@
     "antd": "^5.12.6",
     "axios": "^1.6.3",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-custom-scroll": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
